initial data command

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,15 @@
-.env
 .vscode/
 env/
 media/
-debug.log
-*.pyc
 __pycache__/
+scripts/
+*.pyc
 *.pyo
 *.pyd
-scripts/
+.env
+.djlint
+pyproject.toml
+db.sqlite3
+debug.log
+requirements.dev
+TODO.md
