--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,19 @@ version: '3.8'
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: gunicorn core.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - .:/app
-      - sqlite_data:/app/database/
+      - static_volume:/app/staticfiles
+      - sqlite_data:/app/database
+      - media_volume:/app/media
     ports:
       - "8000:8000"
-    environment:
-      - SECRET_KEY=${SECRET_KEY}
+    env_file:
+      - .env
+    depends_on:
+      - nginx
+
   nginx:
     image: nginx:latest
     volumes:
@@ -18,9 +23,7 @@ services:
       - static_volume:/app/staticfiles
       - media_volume:/app/media
     ports:
-      - "80:80"
-    depends_on:
-      - web
+      - "80:80"    
 
 volumes:
   sqlite_data:
