--- a/nginx.conf
+++ b/nginx.conf
@@ -3,13 +3,16 @@ events {
 }
 
 http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
     server {
         location /static/ {
-            alias /app/staticfiles/;
+            alias /home/reagentree/Reagentree/staticfiles/;
         }
 
         location /media/ {
-            alias /app/media/;  
+            alias /home/reagentree/Reagentree/media/;
         }
 
         location / {
