--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,6 @@
+user nginx;
+worker_processes auto;
+
 events {
     worker_connections 1024;
 }
@@ -7,16 +10,27 @@ http {
     default_type application/octet-stream;
 
     server {
+        #listen 443 ssl;
+        listen 80;
+        server_name _;
+
+        # SSL configuration
+        #ssl_certificate /etc/nginx/ssl/selfsigned.crt;
+        #ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
+
+        #ssl_protocols TLSv1.2 TLSv1.3;
+        #ssl_ciphers HIGH:!aNULL:!MD5;
+
         location /static/ {
-            alias /home/reagentree/Reagentree/staticfiles/;
+            alias /usr/share/nginx/html/static/;
         }
 
         location /media/ {
-            alias /home/reagentree/Reagentree/media/;
+            alias /usr/share/nginx/html/media/;
         }
 
         location / {
-            proxy_pass http://localhost:8000;
+            proxy_pass http://web:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
