--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ db.sqlite3
 db.sqlite3-journal
 media/
 staticfiles/
-
+*.sqlite3
+docker-compose.override.yml
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
