allow larger file to be uploaded

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,6 +8,7 @@ events {
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
+    client_max_body_size 12M;  # Set the maximum allowed size for client request body
 
     server {
         #listen 443 ssl;
