--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,31 @@
 services:
   web:
-    build: .
-    command: gunicorn core.wsgi:application --bind 0.0.0.0:8000 --reload
+    image: machnine/reagentree:latest
+    command: /app/entrypoint.sh    
     volumes:
-      - .:/app
-      - static_volume:/app/staticfiles
+      - data_volume:/app/database
       - media_volume:/app/media
-      - db_data:/app/database
+      - static_volume:/app/staticfiles
     expose:
-      - "8000"
+      - 8000
     env_file:
       - .env
     restart: always
-
+    
 
   nginx:
     image: nginx:latest
     ports:
       - "8000:80"
-    volumes:
-    - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-    - static_volume:/usr/share/nginx/html/static
-    - media_volume:/usr/share/nginx/html/media
+    volumes:      
+      - media_volume:/usr/share/nginx/html/media
+      - static_volume:/usr/share/nginx/html/static
+      - ./nginx.conf:/etc/nginx/nginx.conf
     depends_on:
-      - web 
+      - web
     restart: always
 
 volumes:
-  static_volume:
+  data_volume:
   media_volume:
-  db_data:
+  static_volume:
