--- a/nginx.conf
+++ b/nginx.conf
@@ -11,16 +11,8 @@ http {
     client_max_body_size 12M;  # Set the maximum allowed size for client request body
 
     server {
-        #listen 443 ssl;
         listen 80;
-        server_name _;
-
-        # SSL configuration
-        #ssl_certificate /etc/nginx/ssl/selfsigned.crt;
-        #ssl_certificate_key /etc/nginx/ssl/selfsigned.key;
-
-        #ssl_protocols TLSv1.2 TLSv1.3;
-        #ssl_ciphers HIGH:!aNULL:!MD5;
+        server_name web;        
 
         location /static/ {
             alias /usr/share/nginx/html/static/;
